<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/new_vehicle"
            android:textAlignment="center"
            android:textColor="@color/powderBlue"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:labelFor="@id/plateField"
            android:text="@string/vehicle_plate"
            android:textColor="@color/powderBlue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/plateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:inputType="textCapCharacters" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/vehicle_type"
            android:textColor="@color/powderBlue"
            android:textSize="20sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="25dp" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/vehicle_identification"
                android:textColor="@color/powderBlue"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/identificationToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <Spinner
                android:id="@+id/identificationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:paddingHorizontal="25dp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:text="@string/ok" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>