<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/mobilePrefix" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="36sp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/countryCode"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/powderBlue"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/prefixField"
                            android:layout_width="64sp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:inputType="number"
                            android:maxLength="5" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/zone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/zoneField"
                            android:layout_width="53sp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="15dp"
                            android:inputType="number"
                            android:maxLength="4" />

                        <CheckBox
                            android:id="@+id/locationDetector"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="24dp"
                            android:text="@string/zone_auto_detect" />

                        <ProgressBar
                            android:id="@+id/locationProgressBar"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="18dp"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="-18dp">

                <ScrollView
                    android:id="@+id/vehicleListScroller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/vehicleList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">


                    </LinearLayout>

                </ScrollView>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/startParking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="24dp"
        android:backgroundTint="@color/jade"
        android:paddingHorizontal="60dp"
        android:paddingVertical="12dp"
        android:text="@string/start"
        android:textSize="25sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        android:visibility="gone" />

    <View
        android:id="@+id/inputBlocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>